--- a/.github/workflows/square-equation.yml
+++ b/.github/workflows/square-equation.yml
@@ -2,7 +2,7 @@ name: square equation test
 
 on:
   push:
-    branches: ["unit_test"]
+    branches: ["BDD"]
 
 jobs:
   build:
@@ -23,4 +23,4 @@ jobs:
         run: dotnet build SquareEquationLib/ --no-restore /p:ContinuousIntegrationBuild=true
 
       - name: Unittest and coverage
-        run: dotnet test /p:CoverletOutputFormat=cobertura /p:CollectCoverage=true /p:ThresholdType=line /p:Threshold=100
+        run: dotnet test BDD.Tests /p:CollectCoverage=true /p:CoverletOutput=TestResults /p:CoverletOutputFormat=cobertura
